--- a/src/main/js/CoverageTemplates.css
+++ b/src/main/js/CoverageTemplates.css
@@ -83,6 +83,8 @@ a.JTable-cell:hover,
 }
 .coverage {
   font-family: Calibri, sans-serif !important;
+}
+.coverage div {
   font-size: 15px !important;
 }
 .coverage-code {
@@ -94,4 +96,5 @@ a.JTable-cell:hover,
   padding-left: 5px;
   padding-right: 5px;
   color: #FFFFFF;
+  white-space: pre;
 }
